--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   "license": "MIT",
   "bugs": "https://github.com/skylarkjs/skylark/issues",
   "dependencies": {
-    "skylark-domx-data": "git+https://github.com/skylark-domx/skylark-domx-data.git#master",
-    "skylark-domx-eventer": "git+https://github.com/skylark-domx/skylark-domx-eventer.git#master",
-    "skylark-domx-finder": "git+https://github.com/skylark-domx/skylark-domx-finder.git#master",
-    "skylark-domx-fx": "git+https://github.com/skylark-domx/skylark-domx-fx.git#master",
-    "skylark-domx-geom": "git+https://github.com/skylark-domx/skylark-domx-geom.git#master",
-    "skylark-domx-noder": "git+https://github.com/skylark-domx/skylark-domx-noder.git#master",
+    "skylark-domx-data": "git+https://github.com/skylark-domx/skylark-domx-data.git",
+    "skylark-domx-eventer": "git+https://github.com/skylark-domx/skylark-domx-eventer.git",
+    "skylark-domx-finder": "git+https://github.com/skylark-domx/skylark-domx-finder.git",
+    "skylark-domx-fx": "git+https://github.com/skylark-domx/skylark-domx-fx.git",
+    "skylark-domx-geom": "git+https://github.com/skylark-domx/skylark-domx-geom.git",
+    "skylark-domx-noder": "git+https://github.com/skylark-domx/skylark-domx-noder.git",
     "skylark-domx-placeholders": "git+https://github.com/skylark-domx/skylark-domx-placeholders.git",
-    "skylark-domx-query": "git+https://github.com/skylark-domx/skylark-domx-query.git#master",
-    "skylark-domx-styler": "git+https://github.com/skylark-domx/skylark-domx-styler.git#master",
-    "skylark-domx-velm": "git+https://github.com/skylark-domx/skylark-domx-velm.git#master",
-    "skylark-langx": "git+https://github.com/skylark-langx/skylark-langx.git#master"
+    "skylark-domx-query": "git+https://github.com/skylark-domx/skylark-domx-query.git",
+    "skylark-domx-styler": "git+https://github.com/skylark-domx/skylark-domx-styler.git",
+    "skylark-domx-velm": "git+https://github.com/skylark-domx/skylark-domx-velm.git",
+    "skylark-langx": "git+https://github.com/skylark-langx/skylark-langx.git"
   },
   "engines": {
     "node": ">=0.8.0"
